--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,54 +1,31 @@
-h1 {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  color: rgb(10, 3, 0);
-}
-
-img {
-  padding: 1px;
-  border: groove;
-}
-
-.grid-container {
+form {
   display: grid;
-  grid-template-columns: auto auto auto;
-  grid-gap: 10px;
-  padding: 10px;
+  grid-template-columns: 500px 500px;
+  column-gap: 10px;
+  row-gap: 10px;
+  margin-top: 20px;
 }
 
-.grid-container > div {
-  background-color: white;
-  text-align: center;
-  padding: 15px 0;
-  font-size: 30px;
+form > input,
+select {
+  height: 20px;
+  width: 200px;
 }
 
-.grid-container > div:nth-child(odd) {
-  background-color: rgb(228, 236, 236);
-}
-
-.user,
-.picture,
-.description,
-.code {
-  grid-column-start: 1;
-  grid-column-end: 4;
-}
-
-.button {
-  background-color: rgb(228, 236, 236);
-  border-radius: 60px;
-  border: 1px solid #dcdcdc;
-  display: inline-block;
+input[type="submit"] {
+  height: 50px;
+  width: 200px;
+  border: 1px solid #1a1919;
+  padding: 20px;
   cursor: pointer;
-  color: #666666;
-  font-family: Arial;
-  font-size: 35px;
-  font-weight: bold;
-  padding: 16px 34px;
-  width: 500px;
-  text-decoration: none;
+  display: block;
 }
-.button:hover {
-  background-color: #f9f9f9;
+
+table.bordered-table th,
+td {
+  border: 1px solid silver;
+  padding: 4px;
+}
+table.bordered-table {
+  border-collapse: collapse;
 }
